--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,180 @@
-ale_py==0.7.5
-D4RL==1.1
+absl-py==1.4.0
+ale-py==0.7.5
+alembic==1.13.0
+anyio==3.6.2
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+array2gif==1.0.4
+asttokens==2.1.0
+attrs==22.1.0
+AutoROM==0.4.2
+AutoROM.accept-rom-license==0.6.1
+backcall==0.2.0
+beautifulsoup4==4.11.1
+bleach==5.0.1
+blinker==1.7.0
+box2d-py==2.3.5
+cachetools==5.3.0
+catboost==1.1.1
+certifi==2022.12.7
+cffi==1.15.1
+chardet==5.0.0
+charset-normalizer==3.1.0
+click==8.1.3
+cloudpickle==2.2.1
+contourpy==1.0.6
+cycler==0.11.0
+Cython==3.0.0a10
+databricks-cli==0.18.0
+debugpy==1.6.3
+decorator==5.1.1
+defusedxml==0.7.1
+dm-control==1.0.15
+dm-env==1.6
+dm-tree==0.1.8
+docker==6.1.3
+docopt==0.6.2
+entrypoints==0.4
+et-xmlfile==1.1.0
+etils==1.3.0
+executing==1.2.0
+fasteners==0.19
+fastjsonschema==2.16.2
+Flask==3.0.0
+fonttools==4.38.0
+gitdb==4.0.11
+GitPython==3.1.40
+glfw==2.6.2
+google-auth==2.16.2
+google-auth-oauthlib==0.4.6
+gprof2dot==2022.7.29
+graphviz==0.20.1
+greenlet==3.0.1
+grpcio==1.51.3
+gunicorn==21.2.0
 gym==0.23.1
+gym-notices==0.0.8
+h5py==3.10.0
+idna==3.4
+imageio==2.32.0
+imbalanced-learn==0.10.0
+importlib-metadata==5.0.0
+importlib-resources==5.10.0
+ipykernel==6.17.0
+ipython==8.6.0
+ipython-genutils==0.2.0
+ipywidgets==8.0.2
+itsdangerous==2.1.2
+jedi==0.18.1
+Jinja2==3.1.2
 joblib==1.2.0
+jsonschema==4.17.0
+jupyter==1.0.0
+jupyter-console==6.4.4
+jupyter-server==1.21.0
+jupyter_client==7.4.4
+jupyter_core==4.11.2
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.3
+kiwisolver==1.4.4
+labmaze==1.0.6
+lightgbm==4.3.0
+lxml==4.9.3
+Mako==1.3.0
+Markdown==3.4.2
+MarkupSafe==2.1.1
 matplotlib==3.6.2
+matplotlib-inline==0.1.6
+mistune==2.0.4
+mlflow==2.9.1
+mujoco==3.0.0
+mujoco-py==2.1.2.14
+nbclassic==0.4.8
+nbclient==0.7.0
+nbconvert==7.2.3
+nbformat==5.7.0
+nest-asyncio==1.5.6
+notebook==6.5.2
+notebook_shim==0.2.2
 numpy==1.24.3
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+oauthlib==3.2.2
+opencv-python==4.7.0.72
+openpyxl==3.0.10
+packaging==21.3
 pandas==1.5.1
-scikit_learn==1.1.3
-scipy==1.11.4
+pandocfilters==1.5.0
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.3.0
+pipreqs==0.4.13
+pkgutil_resolve_name==1.3.10
+plotly==5.11.0
+prometheus-client==0.15.0
+prompt-toolkit==3.0.31
+protobuf==4.22.1
+psutil==5.9.3
+psycopg2-binary==2.9.5
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyarrow==14.0.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pybullet==3.2.5
+pycparser==2.21
+pygame==2.1.0
+Pygments==2.13.0
+PyJWT==2.8.0
+PyOpenGL==3.1.7
+pyparsing==3.0.9
+pyrsistent==0.19.2
+python-dateutil==2.8.2
+pytz==2022.6
+PyYAML==6.0.1
+pyzmq==24.0.1
+qtconsole==5.4.0
+QtPy==2.2.1
+querystring-parser==1.2.4
+requests==2.28.2
+requests-oauthlib==1.3.1
+rsa==4.9
+scikit-learn==1.1.3
+scipy==1.9.3
+Send2Trash==1.8.0
+six==1.16.0
+sklearn==0.0.post1
+smmap==5.0.1
+sniffio==1.3.0
+soupsieve==2.3.2.post1
+SQLAlchemy==2.0.23
+sqlparse==0.4.4
+stack-data==0.6.0
+swig==4.1.1
+tabulate==0.9.0
+tenacity==8.1.0
 tensorboard==2.12.0
+tensorboard-data-server==0.7.0
+tensorboard-plugin-wit==1.8.1
+termcolor==2.3.0
+terminado==0.17.0
+threadpoolctl==3.1.0
+tinycss2==1.2.1
 torch==1.13.1
+torch-tb-profiler==0.4.1
+tornado==6.2
 tqdm==4.64.1
+traitlets==5.5.0
+typing_extensions==4.4.0
+urllib3==1.26.15
+wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==1.4.1
+Werkzeug==3.0.1
+widgetsnbextension==4.0.3
+xgboost==2.0.3
+yarg==0.1.9
+zipp==3.10.0
